--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
     "aws-sdk": "^2.572.0",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
-    "lodash": "^4.17.15",
-    "mocha": "^6.2.2",
-    "sinon": "^7.5.0"
+    "mocha": "^6.2.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.10",
